<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefs_category_units">
        <ListPreference
            android:title="@string/prefs_units_title"
            android:key="units"
            android:entries="@array/prefs_units_list"
            android:entryValues="@array/prefs_units_values"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_route_mode">
        <ListPreference
            android:title="@string/mode"
            android:key="transport_mode"
            android:entries="@array/prefs_transportation_modes"
            android:entryValues="@array/prefs_transportation_modes_values"/>
    </PreferenceCategory>
</PreferenceScreen>